HUGE BUG: SHRINK OVERFLOW
While shrinking the website, the contents are overflowing.
Probably due to me setting the shrink to 0 in many places. this bug might cause all of the css to collapse. Will look into it tomorrow.

--- a/Landing_Page/styles.css
+++ b/Landing_Page/styles.css
@@ -251,3 +251,13 @@ body {
     border: 2px solid white;
 }
 
+.footer {
+    /* box-sizing: border-box; */
+    /* border: 2px red solid; */
+    display:flex;
+    height: 400px;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
